<resources>
    <string name="app_name">Invoice Management</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="archive">Archive</string>
    <string name="product_name">Name</string>
    <string name="weight_on_store">Weight On Store</string>
    <string name="weight_on_fridge">Weight On Fridge</string>
    <string name="weight_on_storage">Weight On Storage</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="add_product">Add Product</string>
    <string name="add_manufacturer">Add manufacturer</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="input_new_name">Input new name</string>
    <string name="edit_icon">Edit icon</string>
    <string name="selling_price">Selling Price</string>
    <string name="summary">Summary</string>
    <string name="close_invoice">Close Invoice</string>
    <string name="search">Search</string>
    <string name="input_new_weight">Set  Weight</string>
    <string name="reset">Reset</string>
    <string name="open">Open</string>
    <string name="export_to_excel">Export to Excel</string>
    <string name="total_summary">Total summary</string>
    <string name="add">Add</string>
    <string name="save_success">Save success</string>
    <string name="deleting">Deleting</string>
    <string name="delete_product">Delete %s?</string>

    <string name="email_for_reports">Email For Reports</string>
    <string name="settings">Settings</string>
    <string name="error">Error</string>
    <string name="email_is_required">Email is required!</string>
    <string name="save">Save</string>
    <string name="main">Home</string>
    <string name="get_db">Get Database</string>
    <string name="upload_db">Upload Database</string>
    <string name="invoice_closed">Invoice closed</string>
    <string name="close_invoice_question">Closed Invoice?</string>
    <string name="delete_factory_question">Delete Factory?</string>
    <string name="confirm">Confirm</string>
    <string name="delete_closed_invoice_question">Delete Closed Invoice?</string>
    <string name="export_error">Export Error</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="sell_price">Sell. Price</string>
    <string name="purch_price">Purch. Price</string>

    <string name="delete_factory">Delete Factory</string>
    <string name="input_new_factory_name">New Factory Name</string>
    <string name="all_list">All</string>
    <string name="update_factory">Update Factory Name</string>
</resources>
