<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/edit_icon"
            android:src="@drawable/ic_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="16dp"
            android:text="@string/input_new_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtNewWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Minus -->
        <Button
            android:id="@+id/btnWeightMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"
            android:textSize="14sp"
            android:textStyle="bold" />

        <!-- Reset -->
        <Button
            android:layout_weight="3"
            android:id="@+id/btnWeightReset"
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Plus -->
        <Button
            android:id="@+id/btnWeightPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>