<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">


    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/purchase_price"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/purchaseSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/selling_price"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/sellingSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>